[package]
name = "mycelium-wasm-host"
version = "2.0.0"
edition = "2024"
rust-version = "1.88"
authors = ["Dr. Richard Nicholson <tathatasystems@proton.me>"]
description = "WASM Component host for Mycelium (v2.0 WS-E M12): pull + instantiate sandboxed capability components that talk to the local node through a capability-scoped WIT world — the runtime code-mobility / OSGi-bundle analogue, built on Mycelium's public API"
license = "AGPL-3.0-only"
repository = "https://github.com/RichardEko/mycelium"
keywords = ["wasm", "component-model", "code-mobility", "distributed-systems", "wasmtime"]
categories = ["wasm", "network-programming"]

[dependencies]
# Companion-crate contract: only Mycelium's PUBLIC API is used (the composability
# proof, same as mycelium-tuple-space). wasmtime is confined to THIS crate — it must
# never leak into mycelium / mycelium-core (preserves core's small dep tree; WS-A).
mycelium = { path = "..", default-features = false }

# WASM Component Model runtime. component-model is the WIT/canonical-ABI half.
wasmtime = "45"
# WASI host implementation. Real components (std-based guests) import wasi:* from libc
# init; the host provides a *restricted, deny-by-default* WASI context (no fs/net/env/stdio)
# as part of the sandbox — a component's only doors are our scoped imports + minimal WASI.
wasmtime-wasi = "45"

anyhow   = "1"
# The ArtifactRuntime kind-dispatch trait (docs/design/artifact-library.md §4) is async —
# installs run as long-lived background tasks (large blob pulls must not block a tick).
async-trait = "0.1"
bytes    = "1"
tracing  = "0.1"
sha2     = "0.10"
fastrand = "2"
# Optional signed-provenance over the content address (a publisher vouches for the bytes).
ed25519-dalek = "2"
# `rt` only — the provisioner spawns a serve task per hosted capability (tokio::spawn +
# JoinHandle). The embedder supplies the runtime (same one the GossipAgent runs on).
tokio    = { version = "1.35", features = ["rt"] }
# Resource-aware install eligibility (artifact-library §4.4): the default ResourceProbe
# reads available memory + disk so a node never elects for an artifact it cannot fit.
# system+disk features only — no process/network/component scanning.
sysinfo = { version = "0.38.4", default-features = false, features = ["system", "disk"] }
# The HTTP object-store source (artifact-library §2.2 step 6): GET-by-content-address from
# any HTTP(S) blob store (S3-compatible, nginx, CDN). rustls — no system openssl.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Operator-visible tripwires (Run-38 floor fix): the provisioner/librarian emit counters
# through the `metrics` facade — a no-op without a recorder, and they flow into the node's
# /metrics automatically when the embedder enables mycelium's `metrics` feature. Unconditional
# (unlike core's feature gate) by choice: this crate already carries wasmtime, and the facade
# is tiny.
metrics = "0.24"

[dev-dependencies]
# test-only: the bind-verified, process-unique port allocator (retires the free_port TOCTOU
# flake class). Cargo unions this with the normal `mycelium` dep for the test target only.
mycelium = { path = "..", default-features = false, features = ["test-util"] }
metrics-util = "0.20.4"
tokio = { version = "1.35", features = ["full"] }
