[package]
name = "mycelium-coop-examples"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false
description = "Food-Rescue Co-op example suite — runnable demos of the mailbox, governance, autonomic provisioning, federation, and tuple-space capabilities, composed in one constructive world. See docs/plans/example-suite.md."

[lib]
name = "coop"
path = "src/lib.rs"

# `wasm` pulls the WASM autonomic-provisioner host (wasmtime/cranelift) — heavy, and needed by only
# three demos. Off by default so the other nine (and the coop lib) build fast; the three enable it via
# `required-features`.
[features]
# `wasm` also pulls `mycelium-reason` (the InferenceRouter + serve_model bridge) because the only
# demo that needs the reasoning crate — `reheal_deploy` — also needs the WASM provisioner host, so
# the two travel together behind one gate.
wasm = ["dep:mycelium-wasm-host", "dep:mycelium-reason"]

# Prometheus /metrics on the gateway — populates the Ops Console Metrics tab for the viz showcases.
metrics = ["mycelium/metrics"]

# Each demo is its own bin.
[[bin]]
name = "mailbox_llm"
path = "src/bin/mailbox_llm.rs"

[[bin]]
name = "stigmergy"
path = "src/bin/stigmergy.rs"

[[bin]]
name = "stigmergy_viz"
path = "src/bin/stigmergy_viz.rs"

[[bin]]
name = "provisioning_viz"
path = "src/bin/provisioning_viz.rs"
required-features = ["wasm"]

[[bin]]
name = "catalog_viz"
path = "src/bin/catalog_viz.rs"
required-features = ["wasm"]

[[bin]]
name = "elastic_intent"
path = "src/bin/elastic_intent.rs"

[[bin]]
name = "provisioning"
path = "src/bin/provisioning.rs"
required-features = ["wasm"]

[[bin]]
name = "federation_facts"
path = "src/bin/federation_facts.rs"

[[bin]]
name = "rotation"
path = "src/bin/rotation.rs"

[[bin]]
name = "consensus"
path = "src/bin/consensus.rs"

[[bin]]
name = "diagnostics"
path = "src/bin/diagnostics.rs"

[[bin]]
name = "llm_pipeline"
path = "src/bin/llm_pipeline.rs"

[[bin]]
name = "mcp_toolgrowth"
path = "src/bin/mcp_toolgrowth.rs"
required-features = ["wasm"]

[[bin]]
name = "llm_council"
path = "src/bin/llm_council.rs"

[[bin]]
name = "llm_council_viz"
path = "src/bin/llm_council_viz.rs"

[[bin]]
name = "catalog"
path = "src/bin/catalog.rs"
required-features = ["wasm"]

# Manual demo (needs a local Ollama daemon + a GGUF file) — deliberately NOT in ci_smoke.sh.
[[bin]]
name = "model_deploy"
path = "src/bin/model_deploy.rs"
required-features = ["wasm"]

# Manual demo (needs a local Ollama daemon + a GGUF file) — deliberately NOT in ci_smoke.sh.
# The deploy/reheal flagship, real-model half: a governed GGUF reheals onto the survivor and
# generates real tokens through routed inference after the origin dies. Combines model_deploy's
# artifact-library machinery with mycelium-reason's serve_model bridge + InferenceRouter.
[[bin]]
name = "reheal_deploy"
path = "src/bin/reheal_deploy.rs"
required-features = ["wasm"]

[dependencies]
# The full substrate (gateway is default-on; tls for node identity / the facts lens; llm for the
# Prompt Skills used by the mailbox-llm demo).
mycelium           = { path = "../..", features = ["llm", "tls"] }
# WS-F federation companion — the AgentFacts "lens" mounted on every depot.
mycelium-agentfacts = { path = "../../mycelium-agentfacts" }
# Flagship (Step 04): the tuple-space buffer + the WASM autonomic provisioner.
mycelium-tuple-space = { path = "../../mycelium-tuple-space" }
# Optional behind the `wasm` feature: only `provisioning` + `catalog` need it, and it pulls the
# whole wasmtime/cranelift tree (a very heavy cold build). Gating it here means the other ten demos
# — e.g. `cargo run --bin diagnostics` — build WITHOUT compiling wasmtime. The three demos that need it
# declare `required-features = ["wasm"]`; CI enables it explicitly for those (examples/coop/ci_smoke.sh).
mycelium-wasm-host   = { path = "../../mycelium-wasm-host", optional = true }
# Optional behind `wasm`: the reasoning companion (InferenceRouter + serve_model) — only the
# `reheal_deploy` manual demo uses it, and it needs the WASM host anyway, so they share one gate.
mycelium-reason      = { path = "../../mycelium-reason", features = ["llm", "gateway"], optional = true }

tokio              = { version = "1.35", features = ["full"] }
bytes              = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
# federation_facts: a quilt fetcher does a plain HTTP GET of the neighbour's edge endpoint.
reqwest            = { version = "0.12", features = ["json"] }
# catalog: sign an installable artifact's provenance (publisher vouches for the bytes).
ed25519-dalek      = "2"
